--- a/Style/media.css
+++ b/Style/media.css
@@ -281,6 +281,21 @@
         font-size: 15px;
         width: 140px;
     }
+    .footer__tel {
+        font-size: 15px;
+    }
+    .logo {
+        font-size: 17px;
+        width: 160px;
+    }
+    .header__price {
+        font-size: 20px;
+        width: 110px;
+    }
+    .header__link {
+        font-size: 16px;
+        width: 120px;
+    }
 }
 @media(max-width:1500px) {
     .about__img {
